--- a/moscow_products/Base.lproj/Main.storyboard
+++ b/moscow_products/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,7 +15,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YXR-yj-giY">
+                                <rect key="frame" x="0.0" y="44" width="414" height="69"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="69" id="KkX-qj-qwQ"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="W6t-Co-kvb">
+                                    <size key="itemSize" width="109" height="66"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="textCollectionViewCell" id="HJg-jB-cvA" customClass="textCollectionViewCell" customModule="moscow_products" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="1.5" width="109" height="66"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="c2F-d5-MWZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="109" height="66"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="text" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cuS-fw-7I3">
+                                                    <rect key="frame" x="17" y="5" width="74" height="53"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="cuS-fw-7I3" firstAttribute="leading" secondItem="c2F-d5-MWZ" secondAttribute="leading" constant="17" id="Off-aB-S12"/>
+                                                <constraint firstAttribute="trailing" secondItem="cuS-fw-7I3" secondAttribute="trailing" constant="18" id="hXX-Hd-X6v"/>
+                                                <constraint firstAttribute="bottom" secondItem="cuS-fw-7I3" secondAttribute="bottom" constant="6" id="rk0-iN-JYy"/>
+                                                <constraint firstItem="cuS-fw-7I3" firstAttribute="top" secondItem="c2F-d5-MWZ" secondAttribute="top" constant="7" id="vI7-eV-duv"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="109" height="66"/>
+                                        <connections>
+                                            <outlet property="textText" destination="cuS-fw-7I3" id="7Eq-G5-Ine"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ZOf-tr-dWa"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Zxn-5T-uWt"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="YXR-yj-giY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DQT-Df-Lb9"/>
+                            <constraint firstItem="YXR-yj-giY" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Etf-7L-DGc"/>
+                            <constraint firstItem="YXR-yj-giY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Poi-wJ-vjp"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
